[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/medium_theme.tres" type="Theme" id=1]
[ext_resource path="res://rafflechar.gd" type="Script" id=2]
[ext_resource path="res://theme/small_theme.tres" type="Theme" id=3]
[ext_resource path="res://theme/big_theme.tres" type="Theme" id=4]

[node name="rafflechar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 630.0
alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 25.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 71.0
margin_right = 269.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 198.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Previous 10 Chars:"
align = 1

[node name="previous_chars_list" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 25.0
margin_right = 198.0
margin_bottom = 25.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 340.0
margin_bottom = 362.0
size_flags_vertical = 3

[node name="char_label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 87.0
margin_top = 116.0
margin_right = 252.0
margin_bottom = 217.0
theme = ExtResource( 4 )
text = "\" \""
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 340.0
margin_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 54.0
margin_right = 286.0
margin_bottom = 254.0
alignment = 1

[node name="next_button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 232.0
margin_bottom = 75.0
rect_min_size = Vector2( 232, 75 )
text = "Next"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 79.0
margin_right = 232.0
margin_bottom = 100.0
theme = ExtResource( 3 )
text = "Available Characters:"

[node name="available_chars_textedit" type="TextEdit" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 104.0
margin_right = 232.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 150 )
text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890+-._"
wrap_enabled = true
